--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: poisk-ls
 description: Web Developer from Somewheres
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/jadepoiskls/jadepoiskls/blob/main/79532051.png
 
 #
 # Flags below are optional
