--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: poisk-ls
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewheres
+description: I dont know whoami
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://github.com/jadepoiskls/jadepoiskls/blob/main/79532051.png
