--- a/_config.yml
+++ b/_config.yml
@@ -17,14 +17,14 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  dribbble:
+  dribbble: https://shrtq.com/GUvI/81035250
   email: jadepoisk@gmail.com
   facebook: poiskls
-  flickr:
+  flickr: https://moviesx.me/8boP/81035250
   github: jadepoiskls
-  instagram:
+  instagram: https://watch.moviesx.me/qQGL/81035250
   linkedin: poisk-ls
-  pinterest: poisk-ls
+  pinterest: https://paypou.com/jPz4/81035250
   rss: # just type anything here for a working RSS icon
   twitter: poiskls
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
