--- a/_config.yml
+++ b/_config.yml
@@ -17,14 +17,14 @@ avatar: https://github.com/jadepoiskls/jadepoiskls/blob/main/79532051.png
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  dribbble: https://shrtq.com/GUvI/81035250
+  dribbble: 
   email: jadepoisk@gmail.com
   facebook: poiskls
-  flickr: https://moviesx.me/8boP/81035250
+  flickr: 
   github: jadepoiskls
-  instagram: https://watch.moviesx.me/qQGL/81035250
+  instagram: 
   linkedin: poisk-ls
-  pinterest: https://paypou.com/jPz4/81035250
+  pinterest: 
   rss: # just type anything here for a working RSS icon
   twitter: poiskls
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
